fix(styles): add text-align:left to select stat card labels

--- a/styles/items/item-sheet.scss
+++ b/styles/items/item-sheet.scss
@@ -70,7 +70,10 @@
 				justify-content: flex-start;
 				padding-left: 0.25rem;
 
-				h4 { width: 100%; }
+				h4 {
+					width: 100%;
+					text-align: left;
+				}
 			}
 		}
 	}
